tests/NormalTests/paczka1/fuzzy1/38776134.err
Error in line 6: A885 S828 -3,0
Error in line 2: A885 S828 74,3
Error in line 14: KN4L A885 38,4
Error in line 11: hVm0ziDb A885 27,3
Error in line 18: KN4L A361 63,8
Error in line 21: P1IUd1uTGL A361 99,0
Error in line 25: hVm0ziDb S492 299,6
Error in line 31: 1ImmIe S828 C1,4
Error in line 26: hVm0ziDb A885 18,0
Error in line 24: P1IUd1uTGL S828 42,1
